--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,64 @@
- /* .container {
-    width: 100%;
-    height: 100%;
-  } */
-/*
-  table, td, th {
-    border: none;
-    text-align: left;
-  }
-  
-  td {
-    padding: 15px;
-  }
-  
-  table {
-    border-collapse: collapse;
-    width: 100%;
-    table-layout: fixed;
-  }
-  
-  th {
-    width: 100%;
-    text-align: left;
-    table-layout: fixed;
-  } */
- 
+/*  Name: Tommy Cao
+    Date: 6/10/13
+    Company: GEVH
+    Description: Great Entertainment Vacation Rental Website */
 
+  /* Pagination */
+  .list-wrapper {
+    padding: 18px;
+    overflow: hidden;
+  }
+  
+  .list-item {
+    border: 1px solid #EEE;
+    background: #FFF;
+    margin-bottom: 12px;
+    padding: 12px;
+    box-shadow: 0px 0px 12px 0px rgb(193, 228, 238);
+  }
+  
+  .list-item h4 {
+    font-size: 18px;
+    margin: 0 0 6px;	
+  }
+  
+  .list-item p {
+    margin: 0;
+  }
+  
+  .simple-pagination ul {
+    margin: 0 0 24px;
+    padding: 0;
+    list-style: none;
+    text-align: center;
+  }
+  
+  .simple-pagination li {
+    display: inline-block;
+    margin-right: 6px;
+  }
+  
+  .simple-pagination li a,
+  .simple-pagination li span {
+    color: #000000;
+    padding: 6px 12px;
+    text-decoration: none;
+    border: 1px solid #000000;
+    background-color: #FFF;
+    box-shadow: 0px 0px 12px 0px #EEE;
+  }
+  
+  .simple-pagination .current {
+    color: #FFF;
+    background-color: #6C7570;
+    border-color: #000000;
+  }
+  
+  .simple-pagination .prev.current,
+  .simple-pagination .next.current {
+    background: #6C7570;
+  }
 
+ /* End Pagination */
 
 
